--- a/4.html
+++ b/4.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({id:"3KUCCsA8drClgOe0",ck:"3KUCCsA8drClgOe0"})</script>
   <meta charset="UTF-8">
   <title>均安蒸猪 - 顺德美食详细介绍</title>
   <meta name="keywords" content="均安蒸猪,顺德美食">
