--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+  <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+  <script>LA.init({id:"3KUCCsA8drClgOe0",ck:"3KUCCsA8drClgOe0"})</script>
   <meta charset="UTF-8">
   <title>顺德美食 - 探索广东顺德的美味佳肴</title>
   <meta name="keywords" content="顺德美食,顺德双皮奶,顺德鱼生,顺德陈村粉,顺德伦教糕,顺德均安蒸猪,顺德姜撞奶,顺德大良崩沙,顺德龙江煎堆,顺德乐从鱼腐">
